objects/BMCServiceDesk__BMC_SettingsOf__c.object
<CustomObject>
    <description>BMC_SettingsOf: CMDB class</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>InstanceID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsCurrent__c</fullName>
        <label>IsCurrent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Is Current</fullName>
                </value>
                <value>
                    <fullName>Is Not Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsDefault__c</fullName>
        <label>IsDefault</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Is Default</fullName>
                </value>
                <value>
                    <fullName>Is Not Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsMaximum__c</fullName>
        <label>IsMaximum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Is Maximum</fullName>
                </value>
                <value>
                    <fullName>Is Not Maximum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsMinimum__c</fullName>
        <label>IsMinimum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Is Minimum</fullName>
                </value>
                <value>
                    <fullName>Is Not Minimum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsNext__c</fullName>
        <label>IsNext</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Is Next</fullName>
                </value>
                <value>
                    <fullName>Is Not Next</fullName>
                </value>
                <value>
                    <fullName>Is Next For Single Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsPending__c</fullName>
        <label>IsPending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Is Pending</fullName>
                </value>
                <value>
                    <fullName>Is Not Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Settings Of</label>
    <nameField>
        <label>BMC_SettingsOf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings Of</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>